fix-bugs-and-add-comments

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           class="container__form__input"
           type="text"
           name="valueInput"
-          placeholder="Enter text"
+          placeholder="Enter text (only English and Ukrainian)"
         />
         <button class="container__form__btn" type="submit">send</button>
       </form>
